# fabrica-ia

./: .dockerignore  .env.example  .env.vps.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.full.yml  docker-compose.vps.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/agents/: ai_native_context.py  ai_native_contracts.py  ai_native_executor.py  base.py  execution_context.py  production_contracts.py  production_pipeline_provider.py  results.py  segmented_execution.py  skill_loader.py  skill_registry.py
apps/api/app/api/: routes_ai_cost.py  routes_auth.py  routes_batches.py  routes_feedback.py  routes_gamification.py  routes_global_learning.py  routes_health.py  routes_knowledge.py  routes_learning.py  routes_operator.py  routes_projects.py  routes_review.py  routes_runs.py  routes_runtime.py  routes_service_delivery.py  routes_service_delivery_os.py  routes_workflows.py
apps/api/app/auth/: __init__.py  dependencies.py
apps/api/app/batch/: batch_metrics.py  batch_orchestrator.py
apps/api/app/cli/: __init__.py  (+1 more)
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_ai_native_v2.py  test_context_learning_optimization.py  test_market_ready_closure.py  test_migrations.py  test_object_storage.py  test_operational_ui_contracts.py  test_postgres_rls_ledger.py  test_production_stack_contract.py  test_service_delivery_os.py  test_service_delivery_phase1.py  test_temporal_outbox.py  test_temporal_runner.py  test_tenant_knowledge_rag.py
(+322 files in other folders)
