[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-software-factory-api"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.0",
  "alembic>=1.13.0",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "kubernetes>=30.0.0",
  "litellm>=1.60.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt[crypto]>=2.8.0",
  "redis>=5.0.0",
  "temporalio>=1.18.0,<2.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "migrations*", "tests*"]
